# RARR

./: README.md  launch_editor_demo.py  pyproject.toml  requirements.txt  run_editor_sequential.py
prompts/: hallucination_prompts.py  rarr_prompts.py
utils/: agreement_gate.py  editor.py  evidence_selection.py  hallucination.py  question_generation.py  search.py
