[tool.poetry]
name = "rarr"
version = "0.1.0"
description = ""
authors = ["Anthony Chen <anthony.chen@uci.edu>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7"
matplotlib = "^3.7.1"
jsonlines = "^3.1.0"
numpy = "^1.24.2"
openai = "^0.27.2"
spacy = "^3.5.1"
beautifulsoup4 = "^4.11.2"
sentence-transformers = "^2.2.2"
torch = "^1.13.1"
Levenshtein = "^0.20.9"
fasttext = "^0.9.2"
streamlit = "^1.20.0"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
